<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_products"
            android:icon="@drawable/ic_action_all_products"
            android:title="@string/menu_all_products" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_menu_category"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_menu_my_products"
            android:title="@string/menu_my_products" />
        <item
            android:id="@+id/nav_notifications"
            android:icon = "@drawable/ic_menu_notifications"
            android:title="@string/menu_notifications"
            />
        <item
            android:id="@+id/nav_configurations"
            android:icon="@drawable/ic_menu_configurations"
            android:title="@string/menu_configurations" />
    </group>
</menu>